--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -1,1 +1,15 @@
-<p>budget works!</p>
+@if(folderService.folders()?.length === 0){
+  <div class="max-w-[50rem] flex flex-col mx-auto size-full">
+    <!-- ========== MAIN CONTENT ========== -->
+    <main id="content">
+      <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
+        <h1 class="block text-6xl font-bold text-gray-800 sm:text-6xl">Get Started</h1>
+        <p class="mt-3 text-gray-600">It looks like you haven’t added any folders yet. Folders help you organize your budget into categories like groceries, transportation, and more. Create your first folder to start managing your finances more effectively.</p>
+        <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
+          <app-create-folder></app-create-folder>
+        </div>
+      </div>
+    </main>
+    <!-- ========== END MAIN CONTENT ========== -->
+  </div>
+}
