--- a/src/app/components/core/create-folder/create-folder.component.html
+++ b/src/app/components/core/create-folder/create-folder.component.html
@@ -1,8 +1,8 @@
-<div class="text-center">
+<div class="md:text-center mt-4">
   <button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700
   focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" aria-haspopup="dialog"
           aria-expanded="false" aria-controls="hs-bg-gray-on-hover-cards" data-hs-overlay="#hs-bg-gray-on-hover-cards">
-    Create your first folder
+    Create Folder
   </button>
 </div>
 
