--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -1,7 +1,15 @@
+<div class="flex flex-col mx-auto size-full">
+  <!-- ========== PERIOD PROGRESS BAR ========== -->
+  <div class="text-start">
+    <app-period-bar></app-period-bar>
+  </div>
+  <!-- ========== PERIOD PROGRESS BAR ========== -->
+</div>
+
 @if(folderService.folders()?.length === 0){
   <div class="max-w-[50rem] flex flex-col mx-auto size-full">
     <!-- ========== MAIN CONTENT ========== -->
-    <main id="content">
+    <main id="content-no-folder">
       <div class="text-center py-10 px-4 sm:px-6 lg:px-8">
         <h1 class="block text-6xl font-bold text-gray-800 sm:text-6xl">Get Started</h1>
         <p class="mt-3 text-gray-600">It looks like you haven’t added any folders yet. Folders help you organize your budget into categories like groceries, transportation, and more. Create your first folder to start managing your finances more effectively.</p>
@@ -11,5 +19,11 @@
       </div>
     </main>
     <!-- ========== END MAIN CONTENT ========== -->
+  </div>
+} @else {
+  <div class="flex flex-col mx-auto size-full mt-8">
+    <!-- ========== PERIOD PROGRESS BAR ========== -->
+    <app-folders-overview></app-folders-overview>
+    <!-- ========== PERIOD PROGRESS BAR ========== -->
   </div>
 }
