Feat: categories management v1

--- a/src/app/components/core/create-folder/create-folder.component.html
+++ b/src/app/components/core/create-folder/create-folder.component.html
@@ -1,6 +1,7 @@
 <div class="md:text-center mt-4">
-  <button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700
-  focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" aria-haspopup="dialog"
+  <button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent
+  hover:bg-primary-400 bg-primary-300
+  focus:outline-none focus:bg-primary-400 disabled:opacity-50 disabled:pointer-events-none text-white" aria-haspopup="dialog"
           aria-expanded="false" aria-controls="hs-bg-gray-on-hover-cards" data-hs-overlay="#hs-bg-gray-on-hover-cards">
     Create Folder
   </button>
@@ -49,7 +50,7 @@
       </div>
 
       <div class="flex justify-end items-center gap-x-2 py-3 px-4 border-t">
-        <a class="inline-flex items-center gap-x-1 text-sm text-blue-600 decoration-2 hover:underline focus:outline-none focus:underline font-medium cursor-pointer" (click)="createFolder()">
+        <a class="inline-flex items-center gap-x-1 text-sm text-secondary-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium cursor-pointer" (click)="createFolder()">
           Create Folder
           <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
         </a>
