--- a/src/app/components/core/folders-overview/folders-overview.component.html
+++ b/src/app/components/core/folders-overview/folders-overview.component.html
@@ -97,7 +97,7 @@
         </div>
         <div class="hs-accordion-content hidden w-full overflow-hidden transition-[height] duration-300" role="region" aria-labelledby="hs-bordered-heading-two">
           <div class="pb-4 px-5">
-            content this is content of the content
+            <app-category-overview [categories]="folder.categories"></app-category-overview>
           </div>
         </div>
       </div>
