--- a/src/app/components/core/create-expired-period/create-expired-period.component.html
+++ b/src/app/components/core/create-expired-period/create-expired-period.component.html
@@ -30,9 +30,9 @@
       </div>
 
       <div class="flex items-center">
-        <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-es-xl border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" data-hs-overlay="#hs-cookies">
-          Create a fresh period
-        </button>
+<!--        <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-es-xl border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" data-hs-overlay="#hs-cookies">-->
+<!--          Create a fresh period-->
+<!--        </button>-->
         <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold
         rounded-ee-xl border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
                 data-hs-overlay="#hs-cookies" (click)="clonePeriod()">
