--- a/src/app/components/core/category-overview/category-overview.component.html
+++ b/src/app/components/core/category-overview/category-overview.component.html
@@ -18,20 +18,11 @@
       Create a new category to start tracking your expenses.
     </p>
     <div>
-      <a class="cursor-pointer inline-flex items-center gap-x-1 text-sm text-secondary-100 decoration-2 hover:underline focus:outline-none focus:underline font-medium"
-         (click)="openLearnMoreModal()">
-        Learn more
-        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
-      </a>
+      <app-category-learn-info [folderId]="folderId"></app-category-learn-info>
     </div>
 
     <div class="mt-5 flex flex-col sm:flex-row gap-2">
-      <button type="button" class="py-2 px-3 inline-flex justify-center
-      items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-primary-200 text-white
-      hover:bg-primary-400 focus:outline-none focus:bg-primary-400 disabled:opacity-50 disabled:pointer-events-none">
-        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
-        Create category
-      </button>
+      <app-create-category [folderId]="folderId"></app-create-category>
     </div>
   </div>
   <!-- End Body -->
@@ -625,43 +616,3 @@
   </div>
   <!-- End Table Section -->
 }
-
-
-<!--learn more modal-->
-<div #learnMoreModal id="hs-task-created-alert" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto" role="dialog" tabindex="-1" aria-labelledby="hs-task-created-alert-label">
-  <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto">
-    <div class="relative flex flex-col bg-white shadow-lg rounded-xl">
-      <div class="absolute top-2 end-2">
-        <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#hs-task-created-alert">
-          <span class="sr-only">Close</span>
-          <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
-        </button>
-      </div>
-
-      <div class="p-4 sm:p-10 text-center overflow-y-auto">
-        <!-- Icon -->
-        <span class="mb-4 inline-flex justify-center items-center size-[46px] rounded-full border-4 border-secondary-100 bg-secondary-100 text-white">
-          <svg class="shrink-0 size-5"  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M12 16v-4"/><path d="M12 8h.01"/></svg>
-        </span>
-        <!-- End Icon -->
-
-        <h3 id="hs-task-created-alert-label" class="mb-2 text-xl font-bold text-gray-800">
-          Understanding Categories
-        </h3>
-        <p class="text-gray-500">
-          Categories are specific expenses that live inside a folder. For example, a folder like "Bills" might contain
-          categories such as "Internet," "Car Insurance," or "Phone Payments." By creating categories, you can break down your spending into smaller,
-          more manageable parts, making it easier to track and control your budget. Click
-          <a class="inline-flex items-center gap-x-1.5 text-secondary-100 decoration-2 hover:underline font-medium">Create Category</a>
-          to start adding detailed expenses to your folder!
-        </p>
-
-        <div class="mt-6 flex justify-center gap-x-4">
-          <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50" data-hs-overlay="#hs-task-created-alert">
-            Cancel
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
