Feat: visual form to create category

--- a/src/app/components/core/category-overview/category-overview.component.html
+++ b/src/app/components/core/category-overview/category-overview.component.html
@@ -21,7 +21,7 @@
       <app-category-learn-info [folderId]="folderId"></app-category-learn-info>
     </div>
 
-    <div class="mt-5 flex flex-col sm:flex-row gap-2">
+    <div class="mt-5">
       <app-create-category [folderId]="folderId"></app-create-category>
     </div>
   </div>
