--- a/src/app/components/core/create-category/create-category.component.html
+++ b/src/app/components/core/create-category/create-category.component.html
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-start">
   <button type="button"
           class="py-2 px-3 inline-flex justify-center
       items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-primary-200 text-white
@@ -33,6 +33,7 @@
                 General information
               </label>
 
+              <!-- category name-->
               <div class="mt-2 space-y-3">
                 <input id="general-info-input"
                        type="text"
@@ -40,13 +41,27 @@
                        class="border-1 py-2 px-3 pe-11 block w-full border-gray-200
                        shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
                        placeholder="Name">
-                @if(name.invalid && (!name.untouched)) {
-                  <p class="text-sm text-red-600 mt-2" id="hs-validation-name">Please add the name of your category</p>
-                }
 
-                <!-- Select -->
+                <!-- currency-->
                 <select data-hs-select='{
-                    "placeholder": "Select your category type...",
+                    "placeholder": "Select your currency...",
+                    "toggleTag": "<button type=\"button\" aria-expanded=\"false\"></button>",
+                    "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-primary-400",
+                    "dropdownClasses": "mt-2 z-50 w-full max-h-72 p-1 space-y-0.5 bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300",
+                    "optionClasses": "py-2 px-4 w-full text-sm text-gray-800 cursor-pointer hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50",
+                    "optionTemplate": "<div class=\"flex justify-between items-center w-full\"><span data-title></span><span class=\"hidden hs-selected:block\"><svg class=\"shrink-0 size-3.5 text-blue-600 \" xmlns=\"http:.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><polyline points=\"20 6 9 17 4 12\"/></svg></span></div>",
+                    "extraMarkup": "<div class=\"absolute top-1/2 end-3 -translate-y-1/2\"><svg class=\"shrink-0 size-3.5 text-gray-500 \" xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><path d=\"m7 15 5 5 5-5\"/><path d=\"m7 9 5-5 5 5\"/></svg></div>"
+                  }' class="hidden"
+                        [formControl]="currency">
+                  <option value="USD">USD - United States</option>
+<!--                  @for(currency of currencyService.currencies()?.supportedCurrencyCodes; track currency){-->
+<!--                    <option value="{{currency.code}}">{{currency.name}} - {{currency.code}}</option>-->
+<!--                  }-->
+                </select>
+
+                <!-- type -->
+                <select data-hs-select='{
+                    "placeholder": "Select your type...",
                     "toggleTag": "<button type=\"button\" aria-expanded=\"false\"></button>",
                     "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-primary-400",
                     "dropdownClasses": "mt-2 z-50 w-full max-h-72 p-1 space-y-0.5 bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300",
@@ -55,57 +70,60 @@
                     "extraMarkup": "<div class=\"absolute top-1/2 end-3 -translate-y-1/2\"><svg class=\"shrink-0 size-3.5 text-gray-500 \" xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><path d=\"m7 15 5 5 5-5\"/><path d=\"m7 9 5-5 5 5\"/></svg></div>"
                   }' class="hidden"
                      [formControl]="categoryType">
-                  <option>Country name - Code</option>
+                  @for(type of categoryTypes; track type){
+                    <option value="{{type.value}}">{{type.name}}</option>
+                  }
                 </select>
                 <!-- End Select -->
               </div>
             </div>
             <!-- End general information -->
 
-            <!-- Section -->
             <div class="py-6 first:pt-0 last:pb-0 border-t first:border-transparent border-gray-200">
-              <label for="af-payment-billing-address" class="inline-block text-sm font-medium">
-                Billing address
+              <label class="inline-block text-sm font-medium">
+                Budget Allocation
               </label>
-
               <div class="mt-2 space-y-3">
-                <input id="af-payment-billing-address" type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="Street Address">
-                <input type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="Apt, Syuite, Building (Optional)">
-                <div class="flex flex-col sm:flex-row gap-3">
-                  <input type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="Zip Code">
-                  <select class="py-2 px-3 pe-9 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none">
-                    <option selected>City</option>
-                    <option>City 1</option>
-                    <option>City 2</option>
-                    <option>City 3</option>
-                  </select>
-                  <select class="py-2 px-3 pe-9 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none">
-                    <option selected>State</option>
-                    <option>State 1</option>
-                    <option>State 2</option>
-                    <option>State 3</option>
-                  </select>
-                </div>
+                <input id="af-general-target-amount"
+                       type="text"
+                       [formControl]="generalTargetAmount"
+                       (input)="onInputGeneralTargetChange($event)"
+                       (blur)="formatGeneralAmountValue()"
+                       class="border-1 py-2 px-3 pe-11 block w-full
+                         border-gray-200 shadow-sm text-sm rounded-lg focus:pri
+                         focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                       [placeholder]="categoryType.value == CategoryType.Fixed.toString() ? 'Enter the target amount for each period' : 'Enter the total amount you plan to spend'">
               </div>
             </div>
-            <!-- End Section -->
 
-            <!-- Section -->
-            <div class="py-6 first:pt-0 last:pb-0 border-t first:border-transparent border-gray-200">
-              <label for="af-payment-payment-method" class="inline-block text-sm font-medium">
-                Payment method
-              </label>
-
-              <div class="mt-2 space-y-3">
-                <input id="af-payment-payment-method" type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="Name on Card">
-                <input type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="Card Number">
-                <div class="flex flex-col sm:flex-row gap-3">
-                  <input type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="Expiration Date">
-                  <input type="text" class="border-1 py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none" placeholder="CVV Code">
-                </div>
+            @if(categoryType.value == CategoryType.Custom.toString() && categoryType.value != null){
+              <div class="flex justify-between items-center">
+                <label class="block text-sm font-medium mb-2"></label>
+                <span class="block mb-2 text-sm text-gray-500">Final Date (Optional)</span>
               </div>
-            </div>
-            <!-- End Section -->
+              <input id="af-final-date"
+                     type="date"
+                     class="border-1 py-2 px-3 block w-full
+                       border-gray-200 shadow-sm text-sm rounded-lg focus:border-primary-400
+                       focus:ring-primary-400 disabled:opacity-50 disabled:pointer-events-none"
+                     [formControl]="finalDate"
+                     [min]="today">
+
+              @if(finalDate.value == today || finalDate.value == ''){
+                <hr class="mt-6 mb-6">
+                <div class="mt-2 space-y-3">
+                  <input id="af-target-amount"
+                         type="text"
+                         [formControl]="targetAmount"
+                         (input)="onInputTargetChange($event)"
+                         (blur)="formatTargetAmountValue()"
+                         class="border-1 py-2 px-3 pe-11 block w-full
+                         border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500
+                         focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                         placeholder="Enter the period expense if no final date is set">
+                </div>
+              }
+            }
           </form>
 
 
