Feat: creation of categories from UI

--- a/src/app/components/shared/toast-container/toast-container.component.html
+++ b/src/app/components/shared/toast-container/toast-container.component.html
@@ -1,4 +1,4 @@
-<div class="fixed bottom-0 right-0 m-4">
+<div class="fixed bottom-0 right-0 m-4 toast">
   <div class="space-y-3">
     <!-- singular toast-->
     <ng-container #toastContainer></ng-container>
