--- a/src/app/components/core/create-category/create-category.component.html
+++ b/src/app/components/core/create-category/create-category.component.html
@@ -1,5 +1,6 @@
 <div class="text-start">
-  <button type="button"
+  <button #createCategoryButton
+          type="button"
           class="py-2 px-3 inline-flex justify-center
       items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-primary-200 text-white
       hover:bg-primary-400 focus:outline-none focus:bg-primary-400 disabled:opacity-50 disabled:pointer-events-none" aria-haspopup="dialog" aria-expanded="false"
@@ -16,7 +17,9 @@
         <h3 id="hs-create-category-modal-label" class="font-bold text-gray-800">
           Create category
         </h3>
-        <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" [attr.data-hs-overlay]="'#hs-create-category-modal-'+folderId">
+        <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100
+        text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none"
+                aria-label="Close" [attr.data-hs-overlay]="'#hs-create-category-modal-'+folderId">
           <span class="sr-only">Close</span>
           <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
         </button>
