--- a/src/app/components/core/category-overview/category-overview.component.html
+++ b/src/app/components/core/category-overview/category-overview.component.html
@@ -70,7 +70,7 @@
               <th scope="col" class="px-6 py-3 text-start">
                 <div class="flex items-center gap-x-2">
                   <span class="text-xs font-semibold uppercase tracking-wide text-gray-800">
-                    Actions
+                    Details
                   </span>
                 </div>
               </th>
@@ -80,7 +80,7 @@
             <tbody class="divide-y divide-gray-200">
             @for(category of categories; track category){
               <tr>
-                <td class="size-px whitespace-nowrap">
+                <td class="size-px whitespace-nowrap lg:w-32">
                   <div class="px-6 py-3">
                     <span class="text-sm text-gray-600">
                       {{category.name}}
@@ -110,26 +110,7 @@
                 </td>
                 <td class="size-px whitespace-nowrap">
                   <div class="px-6 py-1.5 flex items-center gap-2">
-                    <div class="hs-dropdown [--placement:bottom-right] relative inline-block">
-                      <button id="hs-table-dropdown-1" type="button" class="hs-dropdown-toggle py-1.5 px-2 inline-flex justify-center items-center gap-2 rounded-lg text-gray-700 align-middle disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm" aria-haspopup="menu" aria-expanded="false" aria-label="Dropdown">
-                        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/></svg>
-                      </button>
-                      <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden divide-y divide-gray-200 min-w-40 z-10 bg-white shadow-2xl rounded-lg p-2 mt-2" role="menu" aria-orientation="vertical" aria-labelledby="hs-table-dropdown-1">
-                        <div class="py-2 first:pt-0 last:pb-0">
-                          <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100" href="#">
-                            Rename
-                          </a>
-                        </div>
-                        <div class="py-2 first:pt-0 last:pb-0">
-                          <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-red-600 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500" href="#">
-                            Delete
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <button>
-                      <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"/><circle cx="12" cy="12" r="3"/></svg>
-                    </button>
+                    <app-category-details [category]="category"></app-category-details>
                   </div>
                 </td>
               </tr>
