--- a/src/app/components/core/category-details/category-details.component.html
+++ b/src/app/components/core/category-details/category-details.component.html
@@ -50,59 +50,41 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
     <!-- Grid -->
     <div class="mt-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5">
       <div>
-        <span class="block text-xs uppercase text-gray-500">Amount paid:</span>
-        <span class="block text-sm font-medium text-gray-800">$316.8</span>
+        <span class="block text-xs uppercase text-gray-500">Target amount:</span>
+        <span class="block text-sm font-medium text-gray-800">{{category?.targetAmount | customCurrencyPipe}} {{category?.generalCategory!.currency}}</span>
       </div>
       <!-- End Col -->
 
       <div>
-        <span class="block text-xs uppercase text-gray-500">Date paid:</span>
-        <span class="block text-sm font-medium text-gray-800">April 22, 2020</span>
+        <span class="block text-xs uppercase text-gray-500">Amount spent:</span>
+        <span class="block text-sm font-medium text-gray-800">{{category?.amountSpent | customCurrencyPipe}} {{category?.generalCategory!.currency}}</span>
       </div>
       <!-- End Col -->
 
       <div>
-        <span class="block text-xs uppercase text-gray-500">Payment method:</span>
-        <div class="flex items-center gap-x-2">
-          <svg class="size-5" width="400" height="248" viewBox="0 0 400 248" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0)">
-              <path d="M254 220.8H146V26.4H254V220.8Z" fill="#FF5F00"/>
-              <path d="M152.8 123.6C152.8 84.2 171.2 49 200 26.4C178.2 9.2 151.4 0 123.6 0C55.4 0 0 55.4 0 123.6C0 191.8 55.4 247.2 123.6 247.2C151.4 247.2 178.2 238 200 220.8C171.2 198.2 152.8 163 152.8 123.6Z" fill="#EB001B"/>
-              <path d="M400 123.6C400 191.8 344.6 247.2 276.4 247.2C248.6 247.2 221.8 238 200 220.8C228.8 198.2 247.2 163 247.2 123.6C247.2 84.2 228.8 49 200 26.4C221.8 9.2 248.6 0 276.4 0C344.6 0 400 55.4 400 123.6Z" fill="#F79E1B"/>
-            </g>
-            <defs>
-              <clipPath id="clip0">
-                <rect width="400" height="247.2" fill="white"/>
-              </clipPath>
-            </defs>
-          </svg>
-          <span class="block text-sm font-medium text-gray-800">•••• 4242</span>
-        </div>
+        <span class="block text-xs uppercase text-gray-500">Type:</span>
+        <span class="block text-sm font-medium text-gray-800">{{CategoryType[category?.generalCategory!.categoryType!]}}</span>
       </div>
       <!-- End Col -->
     </div>
     <!-- End Grid -->
 
+    @if(category?.generalCategory?.categoryType == CategoryType.Custom){
+      Mostrando categoria general
+    }
+
     <div class="mt-5 sm:mt-10">
-      <h4 class="text-xs font-semibold uppercase text-gray-800">Summary</h4>
+      <app-category-amounts-progress-bar [amountSpent]="category?.amountSpent" [targetAmount]="category?.targetAmount" [currency]="category?.generalCategory!.currency"></app-category-amounts-progress-bar>
+    </div>
+
+    <div class="mt-5 sm:mt-10">
+      <h4 class="text-xs font-semibold uppercase text-gray-800">Transactions</h4>
 
       <ul class="mt-3 flex flex-col">
         <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
           <div class="flex items-center justify-between w-full">
-            <span>Payment to Front</span>
+            <span>Example payment</span>
             <span>$264.00</span>
-          </div>
-        </li>
-        <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
-          <div class="flex items-center justify-between w-full">
-            <span>Tax fee</span>
-            <span>$52.8</span>
-          </div>
-        </li>
-        <li class="inline-flex items-center gap-x-2 py-3 px-4 text-sm font-semibold bg-gray-50 border text-gray-800 -mt-px first:rounded-t-lg first:mt-0 last:rounded-b-lg">
-          <div class="flex items-center justify-between w-full">
-            <span>Amount paid</span>
-            <span>$316.8</span>
           </div>
         </li>
       </ul>
@@ -111,12 +93,18 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
     <!-- Button -->
     <div class="mt-5 flex justify-end gap-x-2">
       <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50" href="#">
-        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" x2="12" y1="15" y2="3"/></svg>
-        Invoice PDF
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+             stroke-linecap="round" stroke-linejoin="round" class="shrink-0 size-4"><path d="M12 20h9"/>
+          <path d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z"/></svg>
+        Modify
       </a>
-      <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#">
-        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 6 2 18 2 18 9"/><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><rect width="12" height="8" x="6" y="14"/></svg>
-        Print
+      <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border
+      border-transparent bg-error text-white focus:outline-none disabled:opacity-50 disabled:pointer-events-none">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+             class="shrink-0 size-4"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/>
+          <line x1="10" x2="10" y1="11" y2="17"/><line x1="14" x2="14" y1="11" y2="17"/></svg>
+        Delete
       </a>
     </div>
     <!-- End Buttons -->
