--- a/src/app/components/core/folders-overview/folders-overview.component.html
+++ b/src/app/components/core/folders-overview/folders-overview.component.html
@@ -71,7 +71,10 @@
           </button>
 
           <!--        actions-->
-          <div class="px-6 py-2">
+          <div class="px-6 py-2 flex items-center">
+            <div>
+              <app-create-category [folderId]="folder.id" [isIcon]="true"></app-create-category>
+            </div>
             <div class="hs-dropdown [--placement:bottom-right] relative inline-block">
               <button id="hs-table-dropdown-1" type="button" class="hs-dropdown-toggle py-1.5 px-2 inline-flex justify-center items-center gap-2 rounded-lg text-gray-700 align-middle disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm" aria-haspopup="menu" aria-expanded="false" aria-label="Dropdown">
                 <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/></svg>
